[gd_scene load_steps=6 format=3 uid="uid://y8r8yudkouv0"]

[ext_resource type="Script" path="res://Scripts/DrumSession/right_arrow.gd" id="1_nmn44"]
[ext_resource type="Texture2D" uid="uid://cseudw168xcb5" path="res://Sprites/Drum Session/Drum Road/Snare.png" id="2_uj0u2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jijwe"]
size = Vector2(4, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vsgl6"]
size = Vector2(10, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1brcd"]
size = Vector2(20, 18)

[node name="RightArrow" type="Node2D"]
script = ExtResource("1_nmn44")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_uj0u2")

[node name="Perfect" type="Area2D" parent="."]
position = Vector2(1, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Perfect"]
position = Vector2(-1, 1)
rotation = 1.5708
shape = SubResource("RectangleShape2D_jijwe")
debug_color = Color(0, 0.65098, 0.0862745, 0.419608)

[node name="Good" type="Area2D" parent="."]
position = Vector2(1, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Good"]
position = Vector2(-1, 1)
rotation = 1.5708
shape = SubResource("RectangleShape2D_vsgl6")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Ok" type="Area2D" parent="."]
position = Vector2(1, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ok"]
position = Vector2(-1, 1)
rotation = 1.5708
shape = SubResource("RectangleShape2D_1brcd")
debug_color = Color(0.972549, 0, 0.45098, 0.419608)

[connection signal="area_entered" from="Perfect" to="." method="_on_perfect_area_entered"]
[connection signal="area_exited" from="Perfect" to="." method="_on_perfect_area_exited"]
[connection signal="area_entered" from="Good" to="." method="_on_good_area_entered"]
[connection signal="area_exited" from="Good" to="." method="_on_good_area_exited"]
[connection signal="area_entered" from="Ok" to="." method="_on_ok_area_entered"]
[connection signal="area_exited" from="Ok" to="." method="_on_ok_area_exited"]
